fixed spacing issue

--- a/style.css
+++ b/style.css
@@ -156,7 +156,6 @@ h1 span {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: -40px;
   letter-spacing: 1px;
   font-family: 'Source Sans Pro', sans-serif;
 }
